# ChangeLog for dev-libs/go-usb
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/go-usb/ChangeLog,v 1.1 2015/05/11 16:25:31 mgorny Exp $

*go-usb-9999 (11 May 2015)

  11 May 2015; Michał Górny <mgorny@gentoo.org> +go-usb-9999.ebuild,
  +metadata.xml:
  Add go libusb bindings, as a dependency of go-mtpfs. Bug #547204. Part of
  https://github.com/gentoo/gentoo-portage-rsync-mirror/pull/105 by likewhoa.